# Resurgence

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  SPEC.typ  compile_flags.txt  deny.toml  resurgence.h
.github/workflows/: devskim.yml
include/: Resurgence.hpp
include/Surge_Generation/: ByteCodeOp.hpp
include/backend/: SurgeVM.hpp
ressurgence-vm-backend/: Cargo.toml
ressurgence-vm-backend/src/: main.rs
ressurgence-vm-backend/src/VM-backend/: VMBackend.rs
src/: lib.rs  objects.rs  surge.cpp
src/ResurgenceVM/: start.cpp
src/api/: codereader.rs  codewriter.rs  mod.rs  parser_constants.rs
src/api/code_gen/: mod.rs
src/api/ext_func/: mod.rs  resurgence_state.rs
src/api/level_1/: abstraction.rs  generate_instruction.rs  mod.rs
src/bytecode/: codereader.rs  codewriter.rs  mod.rs  parser_constants.rs
src/codegen/: mod.rs
src/ext_func/: mod.rs
src/ffi/: codeholder.rs  interpreter.rs  mod.rs  state.rs
src/internal/: cardinal.rs  execution_engine.rs  interpreter.rs  mod.rs  runtime_seal.rs
src/internal/interpreter/: execution_engine.rs  imports.rs  mod.rs  resolve_imports.rs  rust_func.rs
src/internal/interpreter/instruction/: cmp.rs  cpy.rs  ext_call.rs  math.rs  mod.rs  mov.rs  ref_reg.rs  stk_push.rs
src/internal/interpreter/utils/: mod.rs
src/internal/runtime_seal/: mod.rs
src/objects/: Interpreter.rs  bytecode.rs  codeholder.rs  constant.rs  instruction.rs  mod.rs  register.rs  resurgence_error.rs  stackframe.rs
