[package]
name = "resurgence"
version = "0.1.9"
edition = "2021"
description = "A VM backend designed to be embedded in an application"
license = "MIT"
authors = ["Mahid Sheikh <sheikhmahid1@hotmail.com>"]
readme = "README.md"
homepage = "https://github.com/Resurgence-VM-Development/Resurgence"
repository = "https://github.com/Resurgence-VM-Development/Resurgence"

[dependencies]
byteorder = "1.4.3"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
