[package]
name = "resurgence"
version = "0.2.0"
edition = "2021"
description = "A VM backend designed to be embedded in an application"
license = "MIT"
authors = ["Mahid Sheikh <mahidsheikh@pm.me>", "dynafide <74845094+dynafide@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/Resurgence-VM-Development/Resurgence"
repository = "https://github.com/Resurgence-VM-Development/Resurgence"

[dependencies]
byteorder = "1.4.3"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
